<resources>
    <string name="app_name">Meet</string>
    <string name="app_description">Tired of waiting so long just to set a meeting?\n\nMeet is a
        scheduler that helps you and your mates to get rid of this issue! Our special algorithm makes
        use of your retrieved Google Calendar Schedules and suggests timings that you can confirm or
        poll.</string>

    <string name="fab_contentdes">addEvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--STATUS-->
    <string name="status_invited">Invited</string>
    <string name="status_polling">Polling</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_pending">Pending</string>

    <string name="sample_eventName">Event Name</string>
    <string name="sample_eventStatus">Event Status</string>
    <string name="sample_eventTiming">yyyy/MM/dd - yyyy/MM/dd</string>
    <string name="sample_eventLocation">Location(Optional)</string>
    <string name="sample_invitee">Invitee Name</string>

    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="button_choose">Choose Dates</string>
    <string name="button_poll">Poll</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_vote">Vote</string>
    <string name="button_enter">Enter</string>

    <string name="loading_event">Creating your event...</string>
    <string name="loading_invitees">Sending out your invites...</string>
    <string name="loading_schedule">Uploading your schedule...</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_incoming">Incoming</string>
    <string name="menu_outgoing">Outgoing</string>
    <string name="menu_confirmed">Confirmed</string>

    <string name="button_register">Register</string>
    <string name="button_invite">Invite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_confirm">You have no confirmed events.</string>
    <string name="empty_invited">You have no invited events.</string>
    <string name="empty_organized">You have not organized any events.</string>

    <!-- APICALL POST URLS -->
    <string name="api_post_register">https://t-bounty-249014.appspot.com/user/register</string>
    <string name="api_post_new_event">https://t-bounty-249014.appspot.com/events/insert</string>
    <string name="api_post_schedule">https://t-bounty-249014.appspot.com/busytime/insert</string>
    <string name="api_post_new_invitees">https://t-bounty-249014.appspot.com/invite/insert</string>
    <string name="api_post_poll">https://t-bounty-249014.appspot.com/poll/date/insert</string>
    <string name="api_post_choice">https://t-bounty-249014.appspot.com/poll/vote/insert</string>

    <!-- APICALL PUT URLS -->
    <string name="api_put_update_events">https://t-bounty-249014.appspot.com/events/put</string>
    <string name="api_put_update_invitees">https://t-bounty-249014.appspot.com/invite/put</string>


    <!-- APICALL GET URLS -->
    <string name="api_get_friends">https://t-bounty-249014.appspot.com/user/friends/</string>
    <string name="api_get_login">https://t-bounty-249014.appspot.com/user/login/</string>
    <string name="api_get_organized">https://t-bounty-249014.appspot.com/events/organized/</string>
    <string name="api_get_invited">https://t-bounty-249014.appspot.com/events/invited/</string>
    <string name="api_get_confirmed">https://t-bounty-249014.appspot.com/events/confirm/</string>
    <string name="api_get_par_busytime">https://t-bounty-249014.appspot.com/busytime/participants/</string>
    <string name="api_get_user_busyime">https://t-bounty-249014.appspot.com/busytime/user/</string>
    <string name="api_get_invitees">https://t-bounty-249014.appspot.com/invite/get/</string>
    <string name="api_get_poll_organizer">https://t-bounty-249014.appspot.com/poll/organizer/</string>
    <string name="api_get_vote_details">https://t-bounty-249014.appspot.com/poll/voting/details/</string>
    <string name="api_get_event_polls">https://t-bounty-249014.appspot.com/poll/participant/</string>

    <string name="meeting_dialog_header">Meeting Details</string>
    <string name="meeting_dialog_title">Title:</string>
    <string name="meeting_dialog_date">Start Date</string>
    <string name="meeting_dialog_to"> To: </string>
    <string name="meeting_dialog_end">End Date</string>
    <string name="meeting_dialog_details">Details:</string>
    <string name="meeting_dialog_nextbtn">NEXT</string>
    <string name="meeting_dialog_backbtn">BACK</string>

    <string name="invite_activity_header">Invite People</string>

    <string name="freeTime_default_selected">0 Timings Selected</string>
    <string name="duration_how_long_in_hrs">Duration: How long(in Hrs)</string>

</resources>
