<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    android:id="@+id/organizing_cv">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">
        <TextView
            android:id="@+id/eventName_tv"
            android:fontFamily="@font/productsans_bold"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/sample_eventName"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/eventStatus_tv"
            android:fontFamily="@font/productsans_bold"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:background="@drawable/button_round"
            android:text="@string/sample_eventStatus"
            android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">
            <TextView
                android:id="@+id/location_tv"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:padding="1dp"/>
            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/sample_eventTiming"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:textSize="10sp"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>